# time-series-stock-prediction

./: README.md  main.py  pyproject.toml  requirements.txt
data/: AAPL_stock_data.parquet  MSFT_stock_data.parquet  NVDA_stock_data.parquet  stock_data.parquet
notebooks/: best_model.pth  best_model_temp.pth  stock_prediction.ipynb  stock_price_predictor.ipynb
src/: data_preprocessing.py  model_training.py  utils.py  visualization.py
